tested highlighting when hovering over new paragraph text.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>hello there</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Rock+Salt&display=swap" rel="stylesheet">
 
@@ -36,7 +36,12 @@
         <strong class = "meeting">Club House Meeting</strong>
       </div>
         
-      <a id = "click" href="https://tinyurl.com/atcscamp" target = "_blank">click me </a><br/>
+      <a id = "click" href="https://tinyurl.com/atcscamp" target = "_blank">Click me!</a><br/>
+
+      <p class = "test">
+        Click the link above for some free cookies!!11
+      </p>
+
 
       <p>
         <img class = "bcaPic" src = "images/BCApic.jpg" 
